@@ -492,6 +492,9 @@
                <height>32</height>
               </size>
              </property>
+             <property name="checkable">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
           </layout>
